--- a/pom.xml
+++ b/pom.xml
@@ -76,13 +76,25 @@
 			<version>4.0.42.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.knowm.xchart</groupId>
+			<artifactId>xchart</artifactId>
+			<version>3.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.theupswell.appengine.counter</groupId>
+			<artifactId>appengine-counter</artifactId>
+			<version>2.0.1</version>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
 
-	<repository>
-		<id>central</id>
-		<name>bintray</name>
-		<url>https://jcenter.bintray.com</url>
-	</repository>
+<!--	<repository>-->
+<!--		<id>central</id>-->
+<!--		<name>bintray</name>-->
+<!--		<url>https://jcenter.bintray.com</url>-->
+<!--	</repository>-->
 
 
 	<build>
