--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,15 @@
 		<version>2.6.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.example</groupId>
 	<artifactId>Java_Project_G7</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Java_Project_G7</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+<!--		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+<!--		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
 		<java.version>11</java.version>
 	</properties>
 
@@ -56,27 +59,76 @@
 <!--			<artifactId>spark-sql_2.11</artifactId>-->
 <!--			<version>2.4.0</version>-->
 <!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>io.netty</groupId>-->
+		<!--			<artifactId>netty-all</artifactId>-->
+		<!--			<version>4.0.42.Final</version>-->
+		<!--		</dependency>-->
+
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_2.11</artifactId>
-			<version>2.1.0</version>
+			<artifactId>spark-core_2.12</artifactId>
+			<version>3.0.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.codehaus.janino</groupId>
+					<artifactId>janino</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-mllib_2.11</artifactId>
-			<version>2.1.0</version>
+			<artifactId>spark-mllib_2.12</artifactId>
+			<version>3.0.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.codehaus.janino</groupId>
+					<artifactId>janino</artifactId>
+				</exclusion>
+			</exclusions>
+
 		</dependency>
 
 		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-all</artifactId>
-			<version>4.0.42.Final</version>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_2.12</artifactId>
+			<version>3.0.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-all</artifactId>
+				</exclusion>
+
+
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+
+				<exclusion>
+					<groupId>org.codehaus.janino</groupId>
+					<artifactId>janino</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>org.codehaus.janino</groupId>
+			<artifactId>janino</artifactId>
+			<version>3.0.8</version>
+		</dependency>
+
+
+
+
+		</dependencies>
+
 <repositories>
 	<repository>
 		<id>central</id>
@@ -85,7 +137,14 @@
 	</repository>
 </repositories>
 
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 
 </project>
