--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<version>4.0.42.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.knowm.xchart</groupId>
+			<artifactId>xchart</artifactId>
+			<version>3.8.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<repository>
